--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,11 @@
  *= require bootstrap.min
  *= require_self
  */
+
+ body {
+  background-color: #fafafa;
+  font-size: 14px;
+  color: #262626;
+}
+
+
