--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   </head>
 
   <body>
+    <%= render 'shared/navbar' if current_user %>
     <div class="container">
       <div class="text-center mt-5">
         <p class="notice"><%= notice %></p>
