--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
           <a class="nav-link core-sprite notification-icon hide-text" href="#"> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link core-sprite profile-icon hide-text" href="#"> <span class="sr-only">(current)</span></a>
+          <%= link_to '', user_path(current_user), class: 'nav-link core-sprite profile-icon hide-text' %>
         </li>
       </ul>
     </div>
