--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <body>
     <%= render 'shared/navbar' if current_user %>
     <div class="container">
-      <div class="text-center mt-5">
+      <div class="text-center">
         <%= yield %>
       </div>
     </div>
