--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,7 +21,7 @@
         <div class="form-group row">
           <%= f.label :name, class: 'col-sm-3 col-form-label text-right font-weight-bold' %>
           <div class="col-sm-9">
-            <p><%= f.text_field :name, autofocus: true, autocomplete: "name", class: 'form-control col-sm-9' %></p>
+            <p><%= f.text_field :name, autofocus: true, autocomplete: 'name', class: 'form-control col-sm-9' %></p>
           </div>
         </div>
 
