scss file made for color-variables

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,8 @@
  */
 
  body {
-  background-color: #fafafa;
+  background-color: $fa-white;
   font-size: 14px;
-  color: #262626;
+  color: $secondary;
 }
 
