--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,12 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-$primary: #dbdbdb;
-$secondary: #262626;
 
 .profile-wrapper {
   padding: 60px 0;
-  border-bottom: 1px solid #efefef;
+  border-bottom: 1px solid $ef-white;
 
   .name {
     font-size: 32px;
