Scss Files: made variables for colors

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,6 +3,15 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+$primary: #dbdbdb;
+$secondary: #262626;
+$solid-black: rgba(0,0,0,.0975);
+$solid-white: #e6e6e6;
+$f-white: #fff;
+$fa-white: #fafafa;
+$ef-white: #efefef;
+
+
 .profile-wrapper {
   padding: 60px 0;
   border-bottom: 1px solid $ef-white;
