--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,6 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+$primary: #dbdbdb;
+$secondary: #262626;
+$solid-black: rgba(0,0,0,.0975);
+$solid-white: #e6e6e6;
+$f-white: #fff;
+$fa-white: #fafafa;
+$ef-white: #efefef;
+
+
 .navbar {
   background-color: $f-white;
   border-bottom: 1px solid $solid-black;
