--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -46,6 +46,13 @@
           </div>
         </div>
 
+        <div class="form-group row">
+          <%= f.label :profile_pic, class: 'col-sm-3 col-form-label text-right font-weight-bold' %>
+          <div class="col-sm-9">
+            <p><%= f.file_field :profile_pic, autocomplete: 'profile_pic', class: 'form-control col-sm-9' %></p>
+          </div>
+        </div>
+
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
         <% end %>
