User Profile: profile css moved to class

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -32,6 +32,12 @@ $ef-white: #efefef;
   border-radius: 50%;
 }
 
+.img-size {
+  width: 152px;
+  height: 152px;
+}
+
+
 .common-btn {
   height: 28px;
   line-height: 24px;
