--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row justify-content-md-center profile-wrapper">
   <div class="col-md-4 text-center">
-    <%= image_tag avatar_url(@user), width: '152', height: '152', alt: 'profile-picture', class: 'round-image' %>
+    <%= image_tag avatar_url(@user), alt: 'profile-picture', class: 'img-size round-image' %>
   </div>
   <div class="col-md-8">
     <div class="row">
