Post feature: create post, posts page, single post page implemented

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,10 @@
 *= require bootstrap.min
 *= require_self
 *= require toastr
+*= require dropzone/dropzone
  */
+
+ @import "dropzone/dropzone";
 
  //variables
 
