--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,9 +2,52 @@
   <div class="row post box col-xl-10 col-lg-11 col-xs-12">
     <div class="col-lg-8 col-md-7 px-0 d-flex post-show-img">
       <div class="align-self-center">
+        <%= render "photos", {post: @post} %>
       </div>
     </div>
     <div class="col-lg-4 col-md-5 mt-sm-4 mt-md-0">
+      <div class="row px-3 d-flex align-items-center">
+        <%= link_to user_path(@post.user), class: "no-text-decoration" do %>
+          <%= image_tag avatar_url(@post.user), class: "post-author-icon" %>
+        <% end %>
+        <%= link_to user_path(@post.user), class: "normal-color no-text-decoration d-flex align-self-center",
+          title: @post.user.name do %>
+          <strong><%= @post.user.name %></strong>
+        <% end %>
+      </div>
+      <hr class="mb-0">
+      <div class="comment-list py-2">
+        <% if @post.content.present? %>
+          <div>
+            <span><strong><%= @post.user.name %></strong></span>
+            <span><%= @post.content %></span>
+          </div>
+        <% end %>
+        <!-- load comments -->
+        <% 100.times do %>
+          <div>
+            <span><strong>Hello kesy ho boy</strong></span>
+            <span>busy hn</span>
+          </div>
+        <% end %>
+      </div>
+      <hr class="mt-0">
+
+      <div class="row actions">
+        <a href="#" class="core-sprite love hide-text">Love</a>
+        <a href="#" class="core-sprite comments hide-text">Comments</a>
+      </div>
+      <div class="strong"><%= pluralize(16, "like") %></div>
+      <%= link_to time_ago_in_words(@post.created_at).upcase + ' AGO', post_path(@post),
+        class: 'light-color post-time no-text-decoration' %>
+      <hr>
+      <div class="row actions">
+        <form action="#" class="w-100">
+          <div>
+            <textarea name="" id="" rows="1" class="form-control comment-input border-0" placeholder="Add a comment ..."></textarea>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
