--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,11 @@
           title: @post.user.name do %>
           <strong><%= @post.user.name %></strong>
         <% end %>
+        <% if @post.belongs_to? current_user %>
+          <%= link_to post_path(@post), method: :delete, class: "ml-auto delete-post-icon mx-0 my-auto" do %>
+            <i class="far fa-trash-alt" aria-hidden="true"></i>
+          <% end %>
+        <% end %>
       </div>
       <hr class="mb-0">
       <div class="comment-list py-2">
@@ -35,7 +40,7 @@
 
       <div class="row actions">
         <a href="#" class="core-sprite love hide-text">Love</a>
-        <a href="#" class="core-sprite comments hide-text">Comments</a>
+        <a href="#" class="core-sprite comment hide-text">Comments</a>
       </div>
       <div class="strong"><%= pluralize(16, "like") %></div>
       <%= link_to time_ago_in_words(@post.created_at).upcase + ' AGO', post_path(@post),
