Post Feature: review changes implemented and use of delegate

--- a/app/views/posts/_posts_list.html.erb
+++ b/app/views/posts/_posts_list.html.erb
@@ -5,8 +5,8 @@
         <%= image_tag avatar_url(post.user), class: "post-author-icon" %>
       <% end %>
       <%= link_to user_path(post.user), class: "normal-color no-text-decoration",
-        title: post.user.name do %>
-        <strong><%= post.user.name %></strong>
+        title: post.user_name do %>
+        <strong><%= post.user_name %></strong>
       <% end %>
       <% if post.belongs_to? current_user %>
         <%= link_to post_path(post), method: :delete, class: "ml-auto delete-post-icon mx-0 my-auto" do %>
@@ -24,7 +24,7 @@
       </div>
       <div><strong><%= pluralize(16, "like") %></strong></div>
       <div>
-        <span><strong><%= post.user.name %></strong></span>
+        <span><strong><%= post.user_name %></strong></span>
         <span><%= post.content %></span>
       </div>
       <%= link_to time_ago_in_words(post.created_at).upcase + ' AGO', post_path(post),
