--- a/app/views/posts/_photos.html.erb
+++ b/app/views/posts/_photos.html.erb
@@ -2,7 +2,7 @@
   <% if post.images.size == 1 %>
     <%= image_tag post.images.first, class: "card-img-top" %>
   <% else %>
-    <div class="carousel slide" data-ride="carousel" id="carousel-post-<%= @post.id %>">
+    <div class="carousel slide" data-ride="carousel" id="carousel-post-<%= post.id %>">
       <div class="carousel-inner">
         <% post.images.each do |photo| %>
           <% if photo == post.images.first %>
@@ -14,11 +14,11 @@
             </div>
         <% end %>
       </div>
-      <a class="carousel-control-prev" href="#carousel-post-<%= @post.id %>" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#carousel-post-<%= post.id %>" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carousel-post-<%= @post.id %>" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carousel-post-<%= post.id %>" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
