--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
         Create Post
       </div>
       <div class="card-body">
-        <%= form_for @post, :html => {:multipart => true, :class => "dropzone upload-images p-0 border-0"} do |f| %>
+        <%= form_for @post, :html => {:multipart => true, :class => "p-0 border-0"} do |f| %>
           <div class="form-group row mt-2">
             <div class="col-auto pr-0">
               <%= image_tag avatar_url(current_user), class: "post-author-icon" %>
@@ -15,15 +15,7 @@
                 placeholder: "Say something about this ..." %>
             </div>
           </div>
-          <%# <div class="fallback"> %>
             <%= f.file_field :images, multiple: true %>
-          <%# </div> %>
-          <%# <div class="dz-message m-0"></div>
-          <div class="dropzone-previews mb-3">
-            <div class="upload-photos-icon">
-              <i class="fa fa-plus fa-2x fa-plus-clr" aria-hidden="true"></i>
-            </div>
-          </div> %>
           <%= f.submit "Post", class: "btn btn-primary" %>
         <% end %>
       </div>
