--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,7 +15,7 @@
           <strong><%= @post.user_name %></strong>
         <% end %>
         <% if policy(@post).edit? %>
-          <%= link_to edit_post_path, class: "ml-auto edit-post-icon mx-0 my-auto" do %>
+          <%= link_to edit_post_path(@post), class: "ml-auto edit-post-icon mx-0 my-auto" do %>
             <i class="far fa-edit" aria-hidden="true"></i>
           <% end %>
         <% end %>
