--- a/app/views/posts/_posts_list.html.erb
+++ b/app/views/posts/_posts_list.html.erb
@@ -38,12 +38,8 @@
       <%= link_to time_ago_in_words(post.created_at).upcase + ' AGO', post_path(post),
         class: 'light-color post-time no-text-decoration' %>
       <hr>
-      <div class="row actions">
-        <form action="#" class="w-100">
-          <div>
-            <textarea rows="1" class="form-control comment-input border-0" placeholder="Add a comment ..."></textarea>
-          </div>
-        </form>
+      <div class="row actions" id="comment-form-post-<%= post.id.to_s %>">
+        <%= render 'comment_form', {post: post} %>
       </div>
     </div>
   </div>
