--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -34,18 +34,15 @@
           </div>
         <% end %>
         <!-- load comments -->
-        <% 100.times do %>
-          <div>
-            <span><strong>Hello kesy ho boy</strong></span>
-            <span>busy hn</span>
-          </div>
-        <% end %>
+        <div id="comment-post-<%= @post.id.to_s %>">
+          <%= render 'comment_list', {post: @post} %>
+        </div>
       </div>
       <hr class="mt-0">
 
       <div class="row actions">
         <div id="like-icon-post-<%= @post.id.to_s %>">
-          <%= render "like_icon", {liked: @liked, post: @post} %>
+          <%= render "like_icon", {liked: current_user.like_on_post(@post), post: @post} %>
         </div>
       </div>
       <div id="like-text-post-<%= @post.id.to_s %>">
@@ -54,12 +51,8 @@
       <%= link_to time_ago_in_words(@post.created_at).upcase + ' AGO', post_path(@post),
         class: 'light-color post-time no-text-decoration' %>
       <hr>
-      <div class="row actions">
-        <form action="#" class="w-100">
-          <div>
-            <textarea name="" id="" rows="1" class="form-control comment-input border-0" placeholder="Add a comment ..."></textarea>
-          </div>
-        </form>
+      <div class="row actions" id="comment-form-post-<%= @post.id.to_s %>">
+        <%= render 'comment_form', {post: @post} %>
       </div>
     </div>
   </div>
