Followership: follow to each other user functionallity is working

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -49,6 +49,14 @@ $ef-white: #efefef;
   font-weight: bold;
 }
 
+.edit-follow-btn {
+  margin: 5px 0 0 15px;
+  height: 5vh;
+  text-align: center;
+  font-weight: bolder;
+
+}
+
 .setting {
   margin: 7px 0 0 10px;
   background-color: transparent;
