Followership-feature: follow following is working fine for both public and private accounts

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
       </form>
       <ul class="navbar-nav ml-md-auto">
         <li class="nav-item active">
-          <a class="nav-link core-sprite explore-icon hide-text" href="#"> <span class="sr-only">(current)</span></a>
+          <%= link_to '', user_requests_pending_path(current_user), class: "nav-link core-sprite explore-icon hide-text" %>
         </li>
         <li class="nav-item active">
           <a class="nav-link core-sprite notification-icon hide-text" href="#"> <span class="sr-only">(current)</span></a>
