--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -73,6 +73,13 @@
         </div>
 
         <div class="form-group row">
+          <%= f.label :account_type, class: 'col-sm-3 col-form-label text-right font-weight-bold' %>
+          <div class="col-sm-9">
+            <%= f.select :account_type ,['general', 'secure'], { class: 'form-control col-sm-9' } %>
+          </div>
+        </div>
+
+        <div class="form-group row">
           <div class="col-sm-3"></div>
           <div class="col-sm-9">
             <%= f.submit "Update", class: 'btn btn-primary' %>
