--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,19 +8,8 @@
 
       <% if @user == current_user %>
         <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-outline-dark common-btn edit-profile-btn"%>
-        <button type="button" class="core-sprite setting" data-toggle="modal" data-target="#exampleModal"></button>
-      <% else %>
-        <% if @followed %>
-          <%= form_tag unfollow_users_path, method: :post, remote: true, class:'float-end' do %>
-            <%= hidden_field_tag :follow_id, @user.id %>
-            <%= submit_tag 'Unfollow', class:'edit-follow-btn btn btn-primary'%>
-          <% end %>
-        <% else %>
-          <%= form_tag follow_users_path, method: :post, remote: true, class:'float-end' do %>
-            <%= hidden_field_tag :follow_id, @user.id %>
-            <%= submit_tag 'Follow', class:'edit-follow-btn btn btn-primary'%>
-          <% end %>
-        <% end %>
+        <button type="button" class="core-sprite setting" data-toggle="modal" data-target="#exampleModal"></button>      <% else %>
+        <%= render "follows", {user: @user, status: @status} %>
       <% end %>
       <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -43,8 +32,8 @@
     </div>
     <div class="row">
       <li><span><%= @user.posts.count %></span> posts</li>
-      <li><span><%= @user.followers.count %></span> followers</li>
-      <li><span><%= @user.following.count %></span> following</li>
+      <li><span><%= @user.follower_relationships.followed.count %></span> followers</li>
+      <li><span><%= @user.following_relationships.followed.count %></span> following</li>
     </div>
     <br>
     <div class="row">
