--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,4 +40,20 @@
       <p class="email"><%= @user.email %></p>
     </div>
   </div>
+    <div class="profile-tab">
+    <% if @user == current_user %>
+    <nav>
+      <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
+        <a class="nav-item nav-link active" id="nav-posts-tab" data-toggle="tab" href="#nav-posts" role="tab" aria-controls="nav-posts" aria-selected="true">POSTS</a>
+      </div>
+    </nav>
+    <% end %>
+    <div class="tab-content pb-3" id="nav-tabContent">
+      <div class="tab-pane fade show active" id ="nav-posts" role="tabpanel" aria-labelledby="nav-posts-tab">
+        <div class="row">
+          <%= render "post", {posts: @posts} %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
