--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -160,3 +160,20 @@ $rgb-black: rgba(0,0,0,.3);
     margin-bottom: 30px;
   }
 }
+
+.search-result-item {
+  padding: 15px;
+}
+
+.search-result-item:hover {
+  background-color: $fa-white;
+}
+
+.popover {
+  border-radius: 0;
+}
+
+.popover-body {
+  background: $f-white;
+  padding: 0;
+}
