--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,9 @@
       <% end %>
       <ul class="navbar-nav ml-md-auto">
         <li class="nav-item active">
+          <%= link_to 'View Stories', stories_path(current_user), class: "btn btn-primary" %>
+        </li>
+        <li class="nav-item active">
           <%= link_to '', user_requests_pending_path(current_user), class: "nav-link core-sprite notification-icon hide-text" %>
         </li>
         <li class="nav-item active">
