--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -51,7 +51,9 @@
     <div class="tab-content pb-3" id="nav-tabContent">
       <div class="tab-pane fade show active" id ="nav-posts" role="tabpanel" aria-labelledby="nav-posts-tab">
         <div class="row">
-          <%= render "post", {posts: @posts} %>
+          <% if @posts %>
+            <%= render "post", {posts: @posts} %>
+          <% end %>
         </div>
       </div>
     </div>
