--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,8 @@
 *
 *= require_tree .
 *= require bootstrap.min
+*= require easy-autocomplete.min
+*= require easy-autocomplete.themes.min
 *= require_self
 *= require toastr
 *= require dropzone/dropzone
