--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,11 +6,9 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <%= form_tag users_path, method: :get, class: "form-inline my-2 my-lg-0 ml-md-auto", id: "users-search",
-        remote: true do %>
-        <%= text_field_tag :term, params[:term], class: "form-control mr-sm-2 text-center common-btn",
-          placeholder: "Search", autocomplete: "off" %>
-        <div id="users-result"></div>
+      <%= form_with url: "/search", method: :get, class: "form-inline my-2 my-lg-0 ml-md-auto" do |f| %>
+        <%= f.text_field :q, class: "form-control mr-sm-2 text-center common-btn",
+          placeholder: "Search", data: {behavior: 'autocomplete'} %>
       <% end %>
       <ul class="navbar-nav ml-md-auto">
         <li class="nav-item active">
