--- a/app/views/users/requests_pending.html.erb
+++ b/app/views/users/requests_pending.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column align-items-center mt-3">
-  <div class="col-xl-7 col-lg-8 col-md-10 col-sm-11 post-card">
+  <div class="col-xl-9 col-lg-10 col-md-11 col-sm-12 post-card">
     <div class="card">
       <div class="card-header">
         People who requested you
@@ -8,12 +8,20 @@
         <% @users.each do |user| %>
           <div class="mb-2">
             <div class="row">
-              <div class="col-sm-4"><%= image_tag avatar_url(user), class: "post-author-icon" %></div>
-              <div class="col-sm-4"><%= user.name %></div>
               <div class="col-sm-4">
-                <%= form_tag accept_request_users_path, method: :post, remote: true, class:'float-end' do %>
+                <%= image_tag avatar_url(user), class: "post-author-icon" %>
+                <%= user.name %>
+              </div>
+              <div class="col-sm-4">
+                <%= form_tag accept_request_users_path, method: :post, class:'float-end' do %>
                   <%= hidden_field_tag :follow_id, user.id %>
                   <%= submit_tag 'Accept Request', class:'edit-follow-btn btn btn-primary'%>
+                <% end %>
+              </div>
+              <div class="col-sm-4">
+                <%= form_tag reject_request_users_path, method: :post, class:'float-end' do %>
+                  <%= hidden_field_tag :follow_id, user.id %>
+                  <%= submit_tag 'Reject Request', class:'edit-follow-btn btn btn-secondary'%>
                 <% end %>
               </div>
             </div>
