--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,7 +52,7 @@
       <div class="tab-pane fade show active" id ="nav-posts" role="tabpanel" aria-labelledby="nav-posts-tab">
         <div class="row">
           <% if @posts %>
-            <%= render "post", {posts: @posts} %>
+            <%= render "post", {posts: @posts || []} %>
           <% end %>
         </div>
       </div>
