--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,17 +16,9 @@
 
   <body>
     <%= render 'shared/navbar' if current_user %>
-    <div class="container">
+    <div class= 'position-relative container'>
       <%= yield %>
+      <%= render 'shared/flash_messages' %>
     </div>
-
-    <% if flash.any? %>
-      <script type="text/javascript">
-        <% flash.each do |key, value| %>
-          <% type = key.to_s.gsub('alert', 'error').gsub('notice', 'success') %>
-          toastr.<%= type %>('<%= value %>')
-        <% end %>
-      </script>
-    <% end %>
   </body>
 </html>
