implement UI changes & some other in controllers

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
 *= require easy-autocomplete.min
 *= require easy-autocomplete.themes.min
 *= require_self
-*= require dropzone/dropzone
+*= require toastr
  */
 
  //variables
