--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,7 +49,8 @@
         <div class="form-group row">
           <%= f.label :profile_pic, class: 'col-sm-3 col-form-label text-right font-weight-bold' %>
           <div class="col-sm-9">
-            <p><%= f.file_field :profile_pic, autocomplete: 'profile_pic', direct_upload: true, class: 'form-control col-sm-9' %></p>
+            <p><%= f.file_field :profile_pic, accept: 'image/*', autocomplete: 'profile_pic',
+            direct_upload: true, class: 'form-control col-sm-9' %></p>
           </div>
         </div>
 
