--- a/app/views/posts/_posts_list.html.erb
+++ b/app/views/posts/_posts_list.html.erb
@@ -25,7 +25,7 @@
     <div class="card-body">
       <div class="row actions">
         <div id="like-icon-post-<%= post.id.to_s %>">
-          <%= render "like_icon", {liked: current_user.like_on_post(post), post: post} %>
+          <%= render "like_icon", { liked: post.likes.by_user(current_user), post: post } %>
         </div>
       </div>
       <div id="like-text-post-<%= post.id.to_s %>">
