--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -10,6 +10,10 @@
             <div class="col-auto pr-0">
               <%= image_tag avatar_url(current_user), class: "post-author-icon" %>
             </div>
+            <div class="col pl-0">
+              <%= f.text_field :content, class: "form-control border-0",
+                placeholder: "Say something about this ..." %>
+            </div>
           </div>
             <%= f.file_field :images, multiple: true, accept: 'image/*', direct_upload: true %>
           <%= f.submit "Publish Story", class: "btn btn-primary" %>
