--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+//variables
 $primary: #dbdbdb;
 $secondary: #262626;
 $solid-black: rgba(0,0,0,.0975);
@@ -9,6 +10,13 @@ $solid-white: #e6e6e6;
 $f-white: #fff;
 $fa-white: #fafafa;
 $ef-white: #efefef;
+$gray-99: #999;
+
+body {
+  background-color: $fa-white;
+  font-size: 14px;
+  color: $secondary;
+}
 
 .navbar {
   background-color: $f-white;
@@ -56,4 +64,86 @@ $ef-white: #efefef;
   background-position: 0 0;
   height: 51px;
   width: 175px;
+}
+
+// Landing
+.landing-left {
+  .dummy-phone {
+    background-image: image-url("dummy-phone-2x.png");
+    background-repeat: no-repeat;
+    background-position: right 0;
+    background-size: 454px 618px;
+    position: relative;
+    height: 618px;
+    margin-left: -35px;
+    margin-right: -15px;
+  }
+
+  .screen-shot {
+    position: absolute;
+    top: 99px;
+    right: 63px;
+
+    .item {
+      position: absolute;
+    }
+  }
+}
+
+.landing-right {
+  .form-login {
+    width: 350px;
+
+    form {
+      padding: 0 40px;
+
+      .btn-primary {
+        width: 100%;
+        line-height: 14px;
+        font-size: 14px;
+        font-weight: 600;
+      }
+
+      input {
+        border: 1px solid $ef-white;
+      }
+
+      .form-check-label {
+        padding: 0;
+        font-size: 15px;
+        color: $secondary;
+      }
+    }
+
+    .brand-name-img {
+      margin: 22px auto 8px;
+    }
+  }
+
+  .redirect-links {
+    width: 350px;
+  }
+}
+
+.light-color {
+  color: $gray-99;
+}
+
+.carousel-fade {
+  .carousel-item.active {
+    opacity: 1;
+    display: block;
+  }
+
+  .carousel-item {
+    transition: opacity 0.6s ease-in-out;
+    opacity: 0;
+    position: relative;
+    display: block;
+  }
+
+  .carousel-item:not(.active) {
+    position: absolute;
+    top: 0px;
+  }
 }
