--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,39 @@
-<h2>Change your password</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6 landing-left">
+      <%= render "devise/shared/dummy_phone" %>
+    </div>
+    <div class="col-lg-6 landing-right text-center d-flex align-items-center">
+      <div>
+        <div class="form-login box">
+          <h3 class="core-sprite brand-name-img"></h3>
+          <h5 class="light-color"><strong>Resend confirmation instructions</strong></h5>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+          <hr>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+            <%= render "shared/devise_messages", resource: resource %>
+
+            <%= f.hidden_field :reset_password_token %>
+
+            <div class="form-group">
+              <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password confirmation", class: "form-control" %>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "Change my password", class: "btn btn-primary" %>
+            </div>
+            <br>
+          <% end %>
+        </div>
+        <div class="redirect-links box">
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
