--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="col-sm-9 right-col">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <%= render "shared/devisemessages", resource: resource %>
+        <%= render "shared/devise_messages", resource: resource %>
 
         <div class="row username-img">
           <div class="col-sm-3 text-right">
